# datakit-sdk-cpp

./: .gitignore  vcpkg.json
include/: Datakit_UUID.h  FTSDK.h  FTSDKDataContracts.h  FTSDKFactory.h  datakit_exports.h
lib/win64/: ft-sdk.lib  ft-sdkd.lib
src/: .gitignore  CMakeLists.txt
src/datakit-sdk-cpp/: datakit-sdk-cpp.sln
src/datakit-sdk-cpp/ft-sdk/: AbstractManager.h  CMakeLists.txt  CacheDBManager.cpp  CacheDBManager.h  CommunicationManager.cpp  CommunicationManager.h  ConfigFileHandler.cpp  ConfigFileHandler.h  Constants.h  DataSyncManager.cpp  DataSyncManager.h  FTSDK.cpp  FTSDKConfigManager.cpp  FTSDKConfigManager.h  FTSDKConstants.h  FTSDKError.h  FTSDKFactory.cpp  FTSDKNode.cpp  FTSDKNode.h  InternalEnums.h  InternalStructs.cpp  InternalStructs.h  LineDBManager.cpp  LineDBManager.h  LineProtocol.cpp  LineProtocol.h  LineProtocolBuilder.cpp  LineProtocolBuilder.h  LogPipeManager.cpp  LogPipeManager.h  LoggerManager.cpp  LoggerManager.h  MonitorManager.cpp  MonitorManager.h  Platform.h  RUMManager.cpp  RUMManager.h  RumDataEntity.cpp  RumDataEntity.h  Singleton.h  (+17 more)
src/datakit-sdk-cpp/ft-sdk-sample/: CMakeLists.txt  Helper.cpp  Helper.h  ft-sdk-sample.aps  ft-sdk-sample.cpp  ft-sdk-sample.rc  ft-sdk-sample.vcxproj  ft-sdk-sample.vcxproj.filters  ft_sdk_config.json  resource.h
src/datakit-sdk-cpp/ft-sdk-sample-ui/: Helper.h  ft-sdk-sample-ui.vcxproj  ft-sdk-sample-ui.vcxproj.filters  ftsdksampleui.cpp  ftsdksampleui.h  ftsdksampleui.qrc  ftsdksampleui.ui  main.cpp  vcpkg-configuration.json  vcpkg.json
src/datakit-sdk-cpp/ft-sdk-unittest/: CMakeLists.txt  LineProtocolTest.cpp  LogTest.cpp  RUMManagerTest.cpp  TestHelper.cpp  TestHelper.h  TraceIDTest.cpp  UrlParserTest.cpp  ft-sdk-unittest.cpp  ft-sdk-unittest.h  ft-sdk-unittest.vcxproj  ft-sdk-unittest.vcxproj.filters
src/datakit-sdk-cpp/ft-sdk/Include/: Datakit_UUID.h  FTSDKConfig.h  FTSDKDataContracts.h
